Fix calendar on mobile safari

--- a/src/components/ui/calendar/calendar.module.scss
+++ b/src/components/ui/calendar/calendar.module.scss
@@ -14,14 +14,12 @@
 }
 
 .months {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: block;
 }
 
 .month {
   display: table;
-  flex-grow: 1;
+  width: 100%;
   border-spacing: 0;
   border-collapse: collapse;
   user-select: none;
@@ -43,7 +41,9 @@
   opacity: 0.43;
   transition: opacity 0.2s ease-out;
 
-  &:hover {
+  &:hover,
+  &:focus,
+  &:active {
     opacity: 1;
   }
 }
